--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,19 +3,33 @@
     padding: 35px;
     &__equipment {
         display: flex;
-        flex-wrap: wrap;
-        list-style-type: none;
-        justify-content: space-around;
-        padding-top: 50px;
+        flex-direction: column;
+        gap: 30px;
+        list-style: none;
+        @media screen and (min-width: 1200px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
     }
     &__list {
-        background: $color-white;
-        /* material shadow v1 */
+        width: 100%;
+        background-color: $color-white;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
+        border-radius: 0 0 4px 4px;
+    
+        @media screen and (min-width: 768px) {
+            flex: 1 1 calc((100% - 30px) / 2);
+        }
+    
+        @media screen and (min-width: 1200px) {
+            flex: 1 1 calc((100% - 90px) / 4);
+        }
     }
     &__name {
-        padding: 32px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 0;
     }
     &__person {
         color: #212121;
@@ -35,15 +49,18 @@
 
 .social {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    padding-top: 16px;
     gap: 10px;
     &__link-container {
-        width: 44px;
-        height: 44px;
-        border-radius: 22px;
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
+        height: 44px;
+        width: 44px;
+        border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        ;
     }
     &__link-icon {
         width: 20px;
