--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import './utils/parametters-general';
 @import './utils/variables.scss';
 @import './components/header';
 @import './components/footer';
