--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -34,6 +34,10 @@
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     transform: translate(-50%, -50%) scale(1);
     padding: 40px;
+    @media screen and (min-width: 768px) {
+        width: 528px;
+        height: 581px;
+    }
 
     &__modal-svg {
         width: 30px;
