--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/parametters-general';
 @import './utils/variables.scss';
+@import './components/mobile-menu';
 @import './components/header';
 @import './components/footer';
 @import './components/modal';
