--- a/sass/components/_Section-title.scss
+++ b/sass/components/_Section-title.scss
@@ -1,48 +1,96 @@
 .title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 600px;
-    width: 1600px;
-    margin: auto;
-    align-items: center;
+    position: relative;
+    background: url("../images/background-mobile.jpg");
+    background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images-fond.jpg");
+    background-repeat: no-repeat;
 
-    &__primary {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: url('../images/background-mobile@2x.jpg');
     }
-    &__primary {
-        color: #FFF;
-        text-align: center;
-        font-size: 44px;
-        font-family: $principal-font;
-        line-height: 60px;
-        letter-spacing: 2.64px;
-        text-transform: uppercase;
+
+    @media screen and (min-width: 768px) {
+        background: url("../images/background-tablet.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url('../images/background-tablet@2x.jpg');
+        }
     }
-    &__button {
-        width: auto;
-        height: auto;
+
+    @media screen and (min-width: 1200px) {
+        background: url("../images/background-desktop.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url('../images/background-desktop@2x.jpg');
+        }
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(47, 48, 58, 0.40);
+    }
+
+    &__container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        z-index: 10;
+        padding: 118px 60px;
+
+        @media screen and (min-width: 1200px) {
+            padding: 200px 452px;
+        }
     }
-    &__boton {
-        padding: 10px 32px;
-        border-radius: 4px;
-        background: #2196F3;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-        color: #FFF;
+
+    &__text {
+        color: $color-white;
+        font-size: 26px;
+        font-weight: 900;
+        width: 360px;
         text-align: center;
-        font-size: 16px;
-        font-family: $principal-font;
-        line-height: 30px;
-        letter-spacing: 0.96px;
-        cursor: pointer;
+        margin-bottom: 30px;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 44px;
+            width: 696px;
+        }
+    }
+
+    .button--title {
+        width: 261px;
+        padding: 10px 0;
     }
 }
-.salto {
-    display: block;
+.button {
+    background-color: $principal-color;
+    color: $color-white;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+        background-color: #188CE8;
+    }
 }
