--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -92,3 +92,24 @@
     left: 0%;
     top: 34px;
 }
+.header__open-button {
+    margin-left: auto;
+    background: none;
+    border: none;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+
+    &:hover {
+        cursor: pointer;
+
+        .icon {
+            fill: $principal-color;
+        }
+    }
+    .icon {
+        width: 40px;
+        height: 40px;
+    }
+}
