--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -35,6 +35,7 @@
         padding: 27px 0px;
         color: #f5f4fa;
         background: rgba(47, 48, 58, 0.8);
+        margin-bottom: 0px;
     }
     @media screen and (min-width: 1200px) {
         display: flex;
