--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,139 @@
 @charset "UTF-8";
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 94px 0;
+  flex-wrap: wrap;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  padding: 0 15px;
+  min-width: 320px;
+  width: 480px;
+}
+
+.text {
+  color: #212121;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.08px;
+}
+
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #fff;
+  transform: translateX(100vw);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu__icon {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu__icon:hover {
+  cursor: pointer;
+  fill: #2196f3;
+}
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-menu__link {
+  color: #212121;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  text-decoration: none;
+}
+.mobile-menu__contact-container {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+}
+.mobile-menu__contact-container .link:first-child {
+  width: -moz-fit-content;
+  width: fit-content;
+  color: #2196f3;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.68px;
+  margin-bottom: 32px;
+  text-decoration: none;
+}
+.mobile-menu__contact-container .link:first-child:hover {
+  color: #188CE8;
+}
+.mobile-menu__contact-container .link:last-child {
+  color: #757575;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.48px;
+  text-decoration: none;
+}
+.mobile-menu__contact-container .link:last-child:hover {
+  color: #2196f3;
+}
+.mobile-menu__social {
+  display: flex;
+  margin-top: 64px;
+  gap: 20px;
+}
+.mobile-menu__social-link {
+  color: #2196f3;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.36px;
+  text-decoration: none;
+}
+.mobile-menu__item-social {
+  position: relative;
+}
+.mobile-menu__item-social:not(:last-child)::after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  width: 1px;
+  height: 22px;
+  background: rgba(33, 33, 33, 0.2);
+}
+
+.mobile-active {
+  color: #2196f3;
+}
+
 .container {
   width: 1200px;
   margin-left: auto;
@@ -94,18 +229,50 @@
   top: 34px;
 }
 
-.seccion-one {
-  display: flex;
-  flex-direction: column;
-  padding-left: 60px;
+.header__open-button {
+  margin-left: auto;
+  background: none;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .header__open-button {
+    display: none;
+  }
+}
+.header__open-button:hover {
+  cursor: pointer;
+}
+.header__open-button:hover .icon {
+  fill: #2196f3;
+}
+.header__open-button .icon {
+  width: 40px;
+  height: 40px;
 }
 
 .footer {
-  background: #2F303A;
-  padding: 60px;
+  background-color: #2f303a;
+  padding: 60px 0;
 }
-.footer__footer {
+.footer__container {
   display: flex;
+  gap: 60px;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    flex-wrap: nowrap;
+    gap: 79px;
+  }
 }
 .footer__webstudio {
   font-family: "Raleway", sans-serif;
@@ -116,33 +283,135 @@
   color: #2196F3;
   text-decoration: none;
 }
-.footer__direction {
-  font-family: "Roboto", "sans-serif";
-  font-style: normal;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.footer__contacts-list {
-  list-style: none;
-  padding-left: 0px;
-  margin-top: 0px;
+@media screen and (min-width: 1200px) {
+  .footer__info {
+    align-items: flex-start;
+  }
 }
-.footer__one-footer {
-  color: #757575;
-  font-family: "Roboto", "sans-serif";
-  font-size: 14px;
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 231px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__list {
+    align-items: flex-start;
+  }
+}
+.footer__link {
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.71;
+  font-weight: 400;
+  letter-spacing: 0.42px;
   font-style: normal;
-  letter-spacing: 0.28px;
   text-decoration: none;
 }
-.footer__one-footer:hover {
-  color: #2196F3;
-}
-
-.salto {
+.footer__span {
   display: block;
+  text-align: center;
+  color: #fff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .footer__span {
+    text-align: left;
+  }
+}
+.footer__span:hover {
+  color: #2196f3;
+}
+.footer__social-title {
+  text-align: center;
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 700;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  color: #fff;
+}
+@media screen and (min-width: 1200px) {
+  .footer__social-title {
+    text-align: left;
+  }
+}
+.footer__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    display: block;
+  }
+}
+.footer__label {
+  text-align: center;
+  display: block;
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .footer__label {
+    text-align: left;
+    padding-bottom: 12px;
+  }
+}
+.footer__input {
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 50px;
+  padding-left: 16px;
+  align-self: center;
+  color: #f5f4fa;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .footer__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+.footer__input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25;
+  letter-spacing: 0.48px;
+}
+.footer__input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25;
+  letter-spacing: 0.48px;
+}
+.footer__input:focus {
+  border: 1px solid #2196f3;
+  outline: none;
 }
 
 .find {
@@ -179,64 +448,41 @@
   fill: #ffffff;
 }
 
-.boletin__input {
-  width: 358px;
-  height: 50px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 15px;
-  margin-top: 20px;
+.logo--footer {
+  padding-bottom: 20px;
 }
-.boletin__inputs {
-  outline: none;
-  display: flex;
-  width: 241px;
-  height: 20px;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  font-family: "Roboto", "sans-serif";
-  line-height: 20px;
-  letter-spacing: 0.48px;
-  border-radius: 4px;
-  background: transparent;
+
+.social__container--footer {
+  background-color: #757575;
 }
-.boletin__container-button {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-left: -50px;
-  margin-top: 55px;
+
+.social__icon--footer {
+  fill: #fff;
 }
-.boletin__buttons {
-  color: #FFF;
+
+.button--footer {
+  position: relative;
   background-color: #2196F3;
-  text-align: center;
-  font-size: 16px;
-  font-family: "Roboto", "sans-serif";
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px;
-  /* 187.5% */
+  width: 200px;
+  padding: 10px 72px 10px 39px;
   letter-spacing: 0.96px;
-  padding: 10px 32px;
+  line-height: 1.87;
+  transform: translateY(-1px);
+  align-self: center;
+  color: #FFFFFF;
+  font-family: "Roboto", "sans-serif";
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
-.boletin__container-svg {
-  display: flex;
-  margin-top: -41px;
-  margin-left: 139px;
-}
-.boletin__iconos {
+
+.button__icon {
+  position: absolute;
+  bottom: 13px;
+  right: 28px;
   width: 24px;
   height: 24px;
-  fill: #ffffff;
+  fill: #FFFFFF;
 }
 
 .modal-backdrop {
@@ -275,6 +521,12 @@
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal__modal-svg {
   width: 30px;
@@ -461,15 +713,34 @@
 .benefits__description {
   list-style: none;
   display: flex;
+  flex-direction: column;
   gap: 30px;
-  padding-top: 94px;
+}
+@media screen and (min-width: 768px) {
+  .benefits__description {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+.benefits__list {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .benefits__list {
+    flex: 1 1 calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    flex: 1 1 calc((100% - 90px) / 4);
+  }
 }
 .benefits__svgs {
-  width: 270px;
-  height: 120px;
+  display: flex;
+  justify-content: center;
+  padding: 25px 0;
+  background-color: #f5f4fa;
   border-radius: 4px;
-  background: #F5F4FA;
-  padding: 25px 100px;
 }
 .benefits__icon {
   width: 70px;
@@ -477,17 +748,25 @@
 }
 .benefits__descriptions {
   color: #212121;
-  font-size: 14px;
   font-family: "Roboto", "sans-serif";
   letter-spacing: 0.42px;
   text-transform: uppercase;
-  padding-top: 30px;
+  font-size: 14px;
+  line-height: 1.17;
+  padding: 30px 0px 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .benefits__descriptions {
+    text-align: left;
+  }
 }
 .benefits__paragraph {
   color: #757575;
   font-size: 14px;
   font-family: "Roboto", "sans-serif";
   line-height: 24px;
+  font-weight: 400;
   letter-spacing: 0.42px;
   padding-top: 10px;
 }
@@ -495,23 +774,31 @@
 .clients {
   padding: 50px;
 }
-.clients__clients {
+.clients__clientes {
   display: flex;
-  justify-content: center;
-  gap: 30px;
-  padding-top: 44px;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 .clients__container {
-  width: 170px;
-  height: 81px;
-  border-radius: 4px;
-  border: 1px solid #AFB1B8;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  padding: 14.09px 0;
+  border-radius: 4px;
+  flex: 1 1 calc((100% - 30px) / 2);
+  border: 1px solid #757575;
 }
 .clients__container:hover {
-  border-color: #2196F3;
+  border-color: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .clients__container {
+    flex: 1 1 calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__container {
+    flex: 1 1 calc((100% - 150px) / 6);
+  }
 }
 .clients__logo {
   height: 52px;
@@ -651,51 +938,97 @@ img {
 }
 
 .title {
+  position: relative;
+  background: url("../images/background-mobile.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .title {
+    background-image: url("../images/background-mobile@2x.jpg");
+  }
+}
+@media screen and (min-width: 768px) {
+  .title {
+    background: url("../images/background-tablet.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .title {
+    background-image: url("../images/background-tablet@2x.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .title {
+    background: url("../images/background-desktop.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .title {
+    background-image: url("../images/background-desktop@2x.jpg");
+  }
+}
+.title::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(47, 48, 58, 0.4);
+}
+.title__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 600px;
-  margin: auto;
   align-items: center;
-  background-position: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/images-fond.jpg");
+  z-index: 10;
+  padding: 118px 60px;
 }
-.title__primary {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
+@media screen and (min-width: 1200px) {
+  .title__container {
+    padding: 200px 452px;
+  }
 }
-.title__primary {
-  color: #FFF;
+.title__text {
+  color: #fff;
+  font-size: 26px;
+  font-weight: 900;
+  width: 360px;
   text-align: center;
-  font-size: 44px;
-  font-family: "Roboto", "sans-serif";
-  line-height: 60px;
-  letter-spacing: 2.64px;
-  text-transform: uppercase;
+  margin-bottom: 30px;
 }
-.title__button {
-  width: auto;
-  height: auto;
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .title__text {
+    font-size: 44px;
+    width: 696px;
+  }
 }
-.title__boton {
-  padding: 10px 32px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
-  text-align: center;
-  font-size: 16px;
-  font-family: "Roboto", "sans-serif";
-  line-height: 30px;
-  letter-spacing: 0.96px;
-  cursor: pointer;
+.title .button--title {
+  width: 261px;
+  padding: 10px 0;
 }
 
-.salto {
-  display: block;
+.button {
+  background-color: #2196f3;
+  color: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button:hover {
+  background-color: #188CE8;
 }
 
 .card {
@@ -704,19 +1037,37 @@ img {
 }
 .card__equipment {
   display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  justify-content: space-around;
-  padding-top: 50px;
+  flex-direction: column;
+  gap: 30px;
+  list-style: none;
+}
+@media screen and (min-width: 1200px) {
+  .card__equipment {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 .card__list {
-  background: #fff;
-  /* material shadow v1 */
+  width: 100%;
+  background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  border-radius: 0 0 4px 4px;
+}
+@media screen and (min-width: 768px) {
+  .card__list {
+    flex: 1 1 calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__list {
+    flex: 1 1 calc((100% - 90px) / 4);
+  }
 }
 .card__name {
-  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
 }
 .card__person {
   color: #212121;
@@ -735,16 +1086,18 @@ img {
 
 .social {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  padding-top: 16px;
   gap: 10px;
 }
 .social__link-container {
-  width: 44px;
-  height: 44px;
-  border-radius: 22px;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social__link-icon {
   width: 20px;
@@ -760,61 +1113,42 @@ img {
   fill: #FFFFFF;
 }
 
-.services__images {
-  list-style: none;
+.services {
+  display: none;
+}
+.services__list {
   display: flex;
+  width: 100%;
   gap: 30px;
-  padding-top: 50px;
 }
-.services__fond {
-  width: 370px;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
+.services__item {
+  display: flex;
+  flex-direction: column-reverse;
+  flex-basis: calc((100% - 60px) / 3);
+  height: 294px;
+  background-size: cover;
 }
-.services__textos {
-  color: #fff;
+.services__item--desktop {
+  background-image: url("../images/image.jpg");
+}
+.services__item--app {
+  background-image: url("../images/imege2.jpg");
+}
+.services__item--design {
+  background-image: url("../images/image3.jpg");
+}
+.services__title {
   font-size: 14px;
+  color: #fff;
   font-family: "Roboto", "sans-serif";
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 0.42px;
-  text-transform: uppercase;
-  padding: 27px 79px;
-}
-
-.services__image-services--one {
-  display: flex;
-  width: 370px;
-  height: 294px;
-  background: url(../images/images.jpg);
-  align-items: flex-end;
-}
-
-.services__image-services--two {
-  display: flex;
-  width: 370px;
-  height: 294px;
-  background: url(../images/images1.jpg);
-  align-items: flex-end;
-}
-
-.services__image-services--three {
-  display: flex;
-  width: 370px;
-  height: 294px;
-  background: url(../images/images2.jpg);
-  align-items: flex-end;
-}
-
-.text {
-  color: #212121;
   text-align: center;
-  font-family: "Roboto", "sans-serif";
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 1.08px;
-  margin-top: 94px;
+  padding: 27px 0px;
+  color: #f5f4fa;
+  background: rgba(47, 48, 58, 0.8);
+  margin-bottom: 0px;
+}
+@media screen and (min-width: 1200px) {
+  .services {
+    display: flex;
+  }
 }/*# sourceMappingURL=main.css.map */
