--- a/sass/utils/_parametters-general.scss
+++ b/sass/utils/_parametters-general.scss
@@ -33,3 +33,14 @@ ul {
   //   width: 1200px;
   //   }
 } 
+
+.text {
+    color: #212121;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.08px;
+}
