--- a/sass/components/_section-portafolios.scss
+++ b/sass/components/_section-portafolios.scss
@@ -3,36 +3,25 @@
     &__buttons {
         display: flex;
         justify-content: center;
-        gap: 20px;
+        gap: 8px;
+        margin-bottom: 50px;
+        flex-wrap: wrap;
         list-style: none;
     }
     &__button {
-        color: #212121;
-        cursor: pointer;
-        text-align: center;
-        font-size: 16px;
-        font-weight: 500;
-        font-family: $principal-font;
-        line-height: 26px;
-        letter-spacing: 0.48px;
-        background: #F5F4FA;
         border-radius: 4px;
-        border: none;
-        width: 128px;
-        height: 38px;
+        background-color: #f5f4fa;
+        border-style: none;
+        padding: 6px 24px;
+        color: $font-color;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover {
+            background-color: $principal-color;
+            color: $color-white;
+            cursor: pointer;
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
+        }
     }
-    &__botones:hover {
-        border-radius: 4px;
-        background: #2196F3;
-        /* shadow-middle */
-        box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
-    }
-}
-.portafolio__button:hover,
-.portafolio__button:focus {
-    background-color: #2196F3;
-    color: #FFFFFF;
 }
 
  .portafolio {
@@ -40,47 +29,51 @@
      &__card-images {
         display: flex;
         flex-wrap: wrap;
-        list-style-type: none;
-        justify-content: space-between;
+        gap: 30px;
     }
     &__card-list {
-        background: #FFFFFF;
-        border-radius: 0px 0px 4px 4px;
-        flex-basis: calc((100% - 60px) / 3);
-        padding-bottom: 35px;
+        width: 100%;
+        background-color: $color-white;
+        border: 1px solid #eeeeee;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
         &:hover {
-            border: 1px solid #EEE;
-            background: #FFF;
-            box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+            cursor: pointer;
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+            ;
+    
+            .cards__text-hidden {
+                top: 0;
+            }
+        }
+        @media screen and (min-width: 768px) {
+            width: calc((100% - 60px) / 2);
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 90px) / 3);
         }
     }
     &__card-animation {
         position: relative;
-        width: 367px;
-        height: 290px;
-        margin: 0 auto;
         overflow: hidden;
-    }
-    &__link-images {
-        max-width: 100%;
-        text-decoration: none;
-    }
-    &__animation {
-        position: absolute;
-        top: 0;
-        background: rgba(33, 150, 243, 0.90);
-        padding: 63px 24px;
-        transform: translatey(100%);
-        transition: transform 250ms ease-in-out;
-        overflow: hidden;
+        height: fit-content
     }
     &__text-animation {
-        color: #ffffff;
+        position: absolute;
+        display: grid;
+        align-items: center;
+        top: 100%;
+        background: rgba(33, 150, 243, 0.90);
+        height: 100%;
+        align-content: center;
+        color: $color-white;
         font-size: 18px;
-        font-style: normal;
         font-weight: 400;
-        line-height: 28px;
+        line-height: 1.55;
         letter-spacing: 0.54px;
+        padding: 24px;
+        transition: top 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     &__card-portafolio {
         display: block;
