--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,8 +11,6 @@
     position: fixed;
     top: 0;
     right: 0;
-    width: 100vw;
-    height: 100vh;
     background-color: #00000090;
 }
 
@@ -23,17 +21,18 @@
 }
 
 .modal {
-    position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 50%;
     left: 50%;
-    width: 528px;
-    height: 581px;
-    margin: 0 auto;
-    border-radius: 4px;
-    background: #FFF;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    transform: translate(-50%, -50%) scale(1);
+    background: $color-white;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 30px);
+    height: 609px;
+    position: absolute;
     padding: 40px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     @media screen and (min-width: 768px) {
         width: 528px;
         height: 581px;
@@ -96,7 +95,7 @@
         left: 15px;
     }
     &__form-message {
-        width: 448px;
+        width: 100%;
         height: 120px;
         margin-top: 4px;
         border: 1px solid rgba(33, 33, 33, 0.2);
